--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,1 +1,6 @@
-@import "../../bower_components/bootstrap/less/bootstrap.less";
+@import '../../bower_components/bootstrap/less/bootstrap';
+@import '_fonts';
+@import '_animate';
+
+@font-path: '../font';
+@font-family-sans-serif: 'Open Sans';
