--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,6 +1,11 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
-@import '_fonts';
-@import '_animate';
 
+@import 'component/_fonts';
+@import 'component/_animate';
+@import 'component/_toggle';
+
+@import 'page/_landing';
+
+@brand-primary: #d7811e;
 @font-path: '../font';
 @font-family-sans-serif: 'Open Sans';
