Imported spigot header stuff. Painful >.<

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3,9 +3,11 @@
 @import 'component/_fonts';
 @import 'component/_animate';
 @import 'component/_toggle';
+@import 'component/_spigot_header';
 
 @import 'page/_landing';
 
+@body-bg: #E2E5F4;
 @brand-primary: #d7811e;
 @font-path: '../font';
 @font-family-sans-serif: 'Open Sans';
