--- a/src/css/component/_spigot_header.less
+++ b/src/css/component/_spigot_header.less
@@ -26,116 +26,6 @@ header li {
     color: rgb(144,142,142);
 }
 
-.Popup {
-    position: relative;
-}
-
-.Popup .arrowWidget {
-    background: transparent url('http://static.spigotmc.org/styles/spigot/uix/sprite.png') no-repeat -32px 0;
-    margin-top: -2px;
-    margin-left: 2px;
-    display: inline-block;
-    vertical-align: middle;
-    background-size: 160px 48px;
-    background-image: none;
-    margin-top: 0;
-    height: auto!important;
-    width: 12px!important;
-    text-align: center;
-    width: 16px;
-    height: 16px;
-}
-
-.Popup .PopupControl,
-.Popup.PopupContainerControl {
-    display: inline-block;
-    cursor: pointer;
-}
-
-.Popup .PopupControl:hover,
-.Popup.PopupContainerControl:hover {
-    color: rgb(44,44,44);
-    text-decoration: none;
-    background: url(http://www.spigotmc.org/rgba.php?r=0&amp;g=0&amp;b=0&amp;a=51);
-    background: rgba(0,0,0,.2);
-}
-
-.Popup .PopupControl:focus,
-.Popup .PopupControl:active,
-.Popup.PopupContainerControl:focus,
-.Popup.PopupContainerControl:active {
-    outline: 0;
-}
-
-.Menu {
-    font-size: 12px;
-    border: 1px solid rgb(217,217,217);
-    border-top: 2px solid #efb61c;
-    overflow: hidden;
-    box-shadow: 0px 3px 0 rgba(0,0,0,0.2);
-    min-width: 200px;
-    *width: 200px;
-    position: absolute;
-    z-index: 7500;
-    display: none;
-}
-
-.formPopup {
-    width: 250px;
-    background-color: #FFFFFF;
-}
-
-.formPopup .ctrlUnit {
-    margin: 5px auto;
-}
-
-
-
-.formPopup .textCtrl,
-.formPopup .button {
-    width: 232px;
-}
-
-.formPopup .ctrlUnit>dt label {
-    display: block;
-    margin-bottom: 2px;
-}
-
-.formPopup .submitUnit dd {
-    text-align: center;
-}
-
-.formPopup .ctrlUnit>dd .explain {
-    margin: 2px 0 0;
-}
-
-.formPopup .primaryControls {
-    zoom: 1;
-    white-space: nowrap;
-    word-wrap: normal;
-    padding: 0 5px;
-}
-
-.formPopup .primaryControls input.textCtrl {
-    margin-bottom: 0;
-}
-
-.formPopup .secondaryControls {
-    padding: 0 5px;
-}
-
-.formPopup .controlsWrapper {
-    background: rgb(250,250,250) url('http://static.spigotmc.org/styles/spigot/xenforo/gradients/category-23px-light.png') repeat-x top;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px 0;
-    font-size: 11px;
-}
-
-.formPopup .controlsWrapper .textCtrl {
-    width: 222px;
-}
-
 .blockLinksList {
     font-size: 11px;
     padding: 2px;
@@ -253,26 +143,12 @@ a.button {
 
 #logo {
     display: block;
-    float: left;
-    line-height: 136px;
-    *line-height: 140px;
     height: 140px;
-    max-width: 100%;
-    vertical-align: middle;
-}
-
-#logo span {
-    *display: inline-block;
-    *height: 100%;
-}
-
-#logo a:hover {
-    text-decoration: none;
 }
 
 #logo img {
     vertical-align: middle;
-    max-width: 100%;
+    max-width: 179px;
 }
 
 #navigation .pageContent {
@@ -474,10 +350,6 @@ a.button {
     border-radius: 5px;
     padding-top: 5px;
     z-index: 7500;
-}
-
-#QuickSearch .secondaryControls {
-    display: none;
 }
 
 #QuickSearch .submitUnit .button {
@@ -721,11 +593,6 @@ li.navTab.members {
     text-indent: 6px;
 }
 
-#QuickSearch .formPopup .secondaryControls {
-    width: 250px;
-    box-sizing: border-box;
-}
-
 #QuickSearch .formPopup .controlsWrapper .textCtrl {
     width: 240px;
     box-sizing: border-box;
@@ -779,16 +646,6 @@ li.navTab.members {
 
 #QuickSearch .formPopup .primaryControls {
     padding: 0;
-}
-
-#QuickSearch .formPopup .secondaryControls {
-    box-shadow: 0 0 5px rgba(0,0,0,.2);
-    padding: 5px;
-    border-radius: 3px;
-    background: #fafafa;
-    position: absolute;
-    top: 40px;
-    z-index: 7500;
 }
 
 #QuickSearch input.button.primary {
@@ -853,10 +710,6 @@ li.navTab.members {
     padding-right: 266px;
 }
 
-#logo img {
-    max-width: 179px;
-}
-
 .formPopup .controlsWrapper {
     background-image: none;
 }
@@ -902,7 +755,7 @@ HEADER
 **********************/
 
 #logo {
-    background: url(//static.spigotmc.org/styles/spigot/style/logo_hilite.png) 50% 50% no-repeat;
+    background: url(//static.spigotmc.org/styles/spigot/style/logo_hilite.png) left center no-repeat;
 }
 
 #logoBlock .spigot_colorOverlay {
@@ -997,18 +850,18 @@ HEADER
 .spigot_headerReadAboutWrapper {
     background: #2a2f35 url(//static.spigotmc.org/styles/spigot/style/userBar_bg.png) repeat;
     padding: 8px 16px;
-    box-sizing: border-box;
     border-radius: 6px;
     font-weight: 700;
     color: #FFF;
     text-shadow: 0 1px rgba(0,0,0,.2);
-    max-width: 300px;
     line-height: 20px;
-    float: right;
     margin-top: 40px;
-    border-top: solid 1px #fff;
     border-top: solid 1px rgba(255,255,255,.3);
     border-bottom: 3px solid #30353b;
+    
+    p {
+        margin-bottom: 0;
+    }
 }
 
 .spigot_headerReadAboutWrapper a {
