--- a/src/css/page/_landing.less
+++ b/src/css/page/_landing.less
@@ -7,17 +7,10 @@
     background: url('../img/landing-background.png');
 
     h1 {
-        font-size: 80px;
-        font-style: italic;
-        letter-spacing: -3px;
-        color: #fff;
-        text-align: center;
+        &:extend(.sleek-title);
         margin: 75px 0 20px;
-        font-weight: 600;
-
-        b {
-            font-weight: 900;
-        }
+        color: #fff;
+        font-size: 80px;
     }
 }
 
