--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,13 +1,12 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
+@import 'bootstrap/_variables';
+@import 'bootstrap/_buttons';
 
 @import 'component/_fonts';
+@import 'component/_lexicon';
 @import 'component/_animate';
 @import 'component/_toggle';
 @import 'component/_spigot_header';
 
 @import 'page/_landing';
-
-@body-bg: #E2E5F4;
-@brand-primary: #d7811e;
-@font-path: '../font';
-@font-family-sans-serif: 'Open Sans';
+@import 'page/_overview';
