--- a/src/css/bootstrap/_variables.less
+++ b/src/css/bootstrap/_variables.less
@@ -17,3 +17,15 @@
 @btn-default-color:              #999;
 @btn-default-bg:                 #e0e0e0;
 @btn-default-border:             #d1d1d1;
+
+@pagination-color:                     #999;
+@pagination-bg:                        #fff;
+@pagination-border:                    @body-bg;
+
+@pagination-hover-color:               #fff;
+@pagination-hover-bg:                  @brand-primary;
+@pagination-hover-border:              @brand-primary;
+
+@pagination-disabled-color:            @gray-light;
+@pagination-disabled-bg:               @body-bg;
+@pagination-disabled-border:           transparent;
