--- a/src/css/page/_overview.less
+++ b/src/css/page/_overview.less
@@ -66,12 +66,7 @@
         }
 
         &:hover {
-            text-decoration: none;
-            background: @brand-primary-light;
-
-            .build-number, .overview-build {
-                color: #fff;
-            }
+            .hovered-listing();
         }
     }
 
