--- a/src/css/bootstrap/_buttons.less
+++ b/src/css/bootstrap/_buttons.less
@@ -48,3 +48,9 @@
     font-weight: 700;
     letter-spacing: 1px;
 }
+
+.btn-lightdash {
+    background: none;
+    border: 1px dashed #ccc;
+    color: #999;
+}
