--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,6 +1,4 @@
-@import '../../bower_components/bootstrap/less/bootstrap';
-@import 'bootstrap/_variables';
-@import 'bootstrap/_buttons';
+@import 'bootstrap/_index';
 
 @import 'component/_fonts';
 @import 'component/_lexicon';
@@ -11,3 +9,4 @@
 @import 'page/_landing';
 @import 'page/_overview';
 @import 'page/_listing';
+@import 'page/_download';
