--- a/src/css/component/_spigot_header.less
+++ b/src/css/component/_spigot_header.less
@@ -662,7 +662,7 @@ li.navTab.members {
     position: relative;
 }
 
-#QuickSearch .primaryControls .fa-search {
+#QuickSearch .primaryControls .icon-search {
     position: absolute;
     top: 0;
     width: 30px;
@@ -671,7 +671,7 @@ li.navTab.members {
     text-align: center;
 }
 
-#QuickSearch .primaryControls .fa-search {
+#QuickSearch .primaryControls .icon-search {
     left: 0;
     font-size: 16px;
     color: #FFF;
