Final mobile fixes

--- a/src/css/page/_landing.less
+++ b/src/css/page/_landing.less
@@ -35,6 +35,7 @@
     .pull-right {
         width: 20%;
         line-height: @download-button-height;
+        white-space: nowrap;
     }
 
     .pull-right {
